--- a/SMGSaveData.Web/wwwroot/index.html
+++ b/SMGSaveData.Web/wwwroot/index.html
@@ -21,7 +21,7 @@
         </svg>
         <div class="loading-progress-text"></div>
         
-        <div class="h4 text-center" style="padding-bottom: 4px">Super Mario Galaxy save converter</div>
+        <div class="h4 text-center" style="padding-bottom: 4px">Super Mario Galaxy 2 save converter</div>
         <div class="text-center">Loading WebAssembly application...</div>
     </div>
 
